@@ -1,0 +1,79 @@
+/**
+ * @file Zentropy menu styles
+ */
+
+#navigation {
+  height: 32px;
+  margin: 0 auto;
+  padding: 44px 0 0 4px;
+  position: relative;
+  width: 960px;
+  z-index: 97;
+  float: none;
+}
+
+#navigation ul.menu {
+  margin: 0;
+  padding: 0;
+  height: 32px;
+}
+
+#navigation ul.menu li {
+  float: left;
+  margin: 0;
+  position: relative;
+  padding: 0;
+  list-style: none;
+}
+
+#navigation ul.menu li a {
+  display: block;
+  padding: 5px 16px 5px 16px;
+  height: 22px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 20px;
+  margin: 0;
+}
+
+#navigation ul.menu li:hover a {
+  z-index: 96;
+}
+
+.with-navigation #content,
+.with-navigation .sidebar {
+  margin-top: 0;
+}
+
+/* Submenus */
+
+#navigation ul.menu li ul.menu {
+  position: absolute;
+  z-index: 98;
+  display: none;
+}
+
+#navigation ul.menu li ul.menu li {
+  float: none;
+  clear: both;
+  position: static;
+}
+
+#navigation ul.menu li ul.menu li a {
+  margin: 0;
+  border-bottom: 1px solid #333333;
+  min-width: 110px; /* change this to however works best for your menus */
+}
+
+#navigation ul.menu li ul.menu li a.last {
+  border-bottom: 0 none;
+}
+
+/* Sub Submenus */
+
+#navigation ul ul ul {
+  left: 100%;
+  top: 0;
+}
